--- a/src/main/resources/Fxml/DashAddCategories.fxml
+++ b/src/main/resources/Fxml/DashAddCategories.fxml
@@ -126,25 +126,36 @@
                         </Label>
 
 
-                        <HBox alignment="CENTER" layoutX="45.0" layoutY="72.0" prefHeight="372.0" prefWidth="641.0" spacing="50.0" style="-fx-padding: 90px 0 0 150px;">
+                        <HBox alignment="CENTER" layoutX="55.0" layoutY="72.0" prefHeight="372.0" prefWidth="641.0" spacing="50.0" style="-fx-padding: 90px 0 0 150px;">
                             <children>
-                                <VBox layoutX="73.0" layoutY="78.0" prefHeight="200.0" prefWidth="454.0">
+                                <VBox layoutX="73.0" layoutY="78.0" prefHeight="200.0" prefWidth="454.0" spacing="10" >
                                     <children>
-                                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text=" Nom du catégorie">
-                                 <font>
-                                    <Font size="19.0" />
-                                 </font></Text>
+                                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text=" Nom du catégorie" >
+                                            <font>
+                                                <Font size="19.0" />
+                                            </font>
+                                        </Text>
                                         <TextField fx:id="categorie_prod" />
                                         <Label fx:id="errorLabel" textFill="red" />
-                                        <Button fx:id="ajouter" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
+                                        <HBox spacing="10">
+                                            <children>
+                                                <Button fx:id="ajouter" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
+                                                <Button fx:id="addCategoryButton" onAction="#afficherListeCategories" text="Afficher la liste des catégories" />
+                                            </children>
+
+                                        </HBox>
                                     </children>
                                 </VBox>
                             </children>
-
                         </HBox>
 
 
+
+
+
                     </children>
+
+
                 </Pane>
             </children>
         </StackPane>
