--- a/src/main/resources/Fxml/DashCategories.fxml
+++ b/src/main/resources/Fxml/DashCategories.fxml
@@ -130,7 +130,7 @@
 
                             <HBox alignment="CENTER" layoutX="139.0" layoutY="128.0" prefHeight="293.0" prefWidth="641.0" spacing="50.0" style="-fx-padding: 90px 0 0 150px;">
                                 <children>
-                                    <TableView fx:id="table" prefHeight="293.0" prefWidth="414.0">
+                                    <TableView fx:id="table" prefHeight="295.0" prefWidth="434.0">
                                         <columns>
 
                                             <TableColumn fx:id="nomm" prefWidth="192.79998779296875" text="Nom catégorie" />
@@ -142,7 +142,7 @@
                                 </children>
 
                         </HBox>
-
+                        <Button fx:id="addCategoryButton" layoutX="170" layoutY="170" onAction="#addCategory" text="Ajouter une catégorie" />
                         <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="812.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../resources/icons8_Search_52px.png" />
